--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
     <link rel="stylesheet" href="css/styles.css">
     <title>Restaurant Reviews</title>
@@ -10,19 +12,24 @@
 <body>
     <header>
         <nav>
-            <h1><a href="/">Restaurant Reviews</a></h1>
+            <h1>
+        <a tabindex="0" href="/">Restaurant Reviews</a>
+      </h1>
         </nav>
     </header>
-    <main id="maincontent">
-        <section id="map-container">
-            <div id="map"></div>
+    <main id="maincontent" role="main">
+        <a href="#filter" class="skip-link">Skip to main content</a>
+        <section id="map-container" aria-label="google map">
+            <div id="map" role="application"></div>
         </section>
         <section>
             <div class="filter-options">
-                <h2>Filter Results</h2>
+                <h2 id="filter" tabindex="0">Filter By:</h2>
+                <label for="neighborhoods-select">Select Neighborhood</label>
                 <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
                     <option value="all">All Neighborhoods</option>
                 </select>
+                <label for="cuisines-select">Select Cuisine</label>
                 <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
                     <option value="all">All Cuisines</option>
                 </select>
