--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     </main>
     <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
     <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
+    <script type="application/javascript" src="/serviceworker_registration.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAfNw0teKVCPl25PhLSad4u21nAgBIbSNA&libraries=places&callback=initMap"></script>
     <footer id="footer">
         Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
