--- a/restaurant.html
+++ b/restaurant.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Normalize.css for better cross-browser consistency -->
     <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
     <!-- Main CSS file -->
@@ -11,37 +13,43 @@
 
 <body class="inside">
     <!-- Beginning header -->
-    <header>
+    <!-- Beginning header -->
+    <header class="restaurant-header">
         <!-- Beginning nav -->
-        <nav>
-            <h1><a href="/">Restaurant Reviews</a></h1>
+        <nav class="restaurant-header__nav">
+            <h1>
+        <a href="/">Restaurant Reviews</a>
+      </h1>
         </nav>
         <!-- Beginning breadcrumb -->
-        <ul id="breadcrumb">
-            <li><a href="/">Home</a></li>
+        <ul id="breadcrumb" role="navigation" aria-label="Breadcrumb">
+            <li>
+                <a href="/">Home</a>
+            </li>
         </ul>
         <!-- End breadcrumb -->
         <!-- End nav -->
     </header>
     <!-- End header -->
     <!-- Beginning main -->
-    <main id="maincontent">
-        <!-- Beginning map -->
-        <section id="map-container">
-            <div id="map"></div>
-        </section>
-        <!-- End map -->
+    <main id="maincontent" class="restaurant-main" aria-describedby="restaurant-name" role="main">
         <!-- Beginning restaurant -->
-        <section id="restaurant-container">
-            <h1 id="restaurant-name"></h1>
-            <img id="restaurant-img">
+        <section id="restaurant-container" role="article" aria-label="restaurant details" tabindex="0">
+            <h2 id="restaurant-name"></h2>
+            <img id="restaurant-img" alt="restaurant presentation photo">
             <p id="restaurant-cuisine"></p>
             <p id="restaurant-address"></p>
             <table id="restaurant-hours"></table>
+            <a href="#reviews-container" class="skip-link">Skip map</a>
         </section>
         <!-- end restaurant -->
+        <!-- Beginning map -->
+        <section id="map-container" aria-label="google map">
+            <div id="map" role="application"></div>
+        </section>
+        <!-- End map -->
         <!-- Beginning reviews -->
-        <section id="reviews-container">
+        <section id="reviews-container" role="article">
             <ul id="reviews-list"></ul>
         </section>
         <!-- End reviews -->
@@ -57,6 +65,8 @@
     <script type="text/javascript" src="js/dbhelper.js"></script>
     <!-- Main javascript file -->
     <script type="text/javascript" src="js/restaurant_info.js"></script>
+    <!-- Service Worker Registration -->
+    <script type="application/javascript" src="/serviceworker_registration.js"></script>
     <!-- Google Maps -->
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAfNw0teKVCPl25PhLSad4u21nAgBIbSNA&libraries=places&callback=initMap"></script>
     <!-- End scripts -->
