fix: service worker files 	modified:   index.html 	modified:   restaurant.html 	renamed:    serviceworker.js -> sw.js 	renamed:    serviceworker_registration.js -> sw_registration.js

--- a/restaurant.html
+++ b/restaurant.html
@@ -66,7 +66,7 @@
     <!-- Main javascript file -->
     <script type="text/javascript" src="js/restaurant_info.js"></script>
     <!-- Service Worker Registration -->
-    <script type="application/javascript" src="/serviceworker_registration.js"></script>
+    <script type="application/javascript" src="/sw_registration.js"></script>
     <!-- Google Maps -->
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAfNw0teKVCPl25PhLSad4u21nAgBIbSNA&libraries=places&callback=initMap"></script>
     <!-- End scripts -->
