--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main id="maincontent" role="main">
         <a href="#filter" class="skip-link">Skip to main content</a>
         <section id="map-container" aria-label="google map">
-            <div id="map" role="application"></div>
+            <div id="map" role="application" tabindex="-1"></div>
         </section>
         <section>
             <div class="filter-options">
