--- a/restaurant.html
+++ b/restaurant.html
@@ -45,7 +45,7 @@
         <!-- end restaurant -->
         <!-- Beginning map -->
         <section id="map-container" aria-label="google map">
-            <div id="map" role="application"></div>
+            <div id="map" role="application" tabindex="-1"></div>
         </section>
         <!-- End map -->
         <!-- Beginning reviews -->
